@@ -1,3 +1,7 @@
+2006-01-25  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* configure.in, configure, tclconfig/tcl.m4: update to TEA 3.5
+
 2006-01-22  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* tclconfig/tcl.m4, configure: update to TEA 3.4 interim
